--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,3 +9,12 @@ appTitle=Final Project Exercice
 appDescription=Bootcamp Sap Fiori final exercice
 #XTIT: Main view title
 title=Final Project Exercice
+
+#Suppliers table fragment headers
+
+supplierId=Supplier ID
+companyName=Company Name
+contactName=Contact Name
+contactTitle=Contact Title
+address=Address
+city=City
