--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -18,3 +18,5 @@ contactName=Contact Name
 contactTitle=Contact Title
 address=Address
 city=City
+tableHeaderTitle=Suppliers Table
+placeholderSearchInput=Search by name or id
