Feature: Created a detail view where was implemented a simple form showing provider info and below a smart table expanding the supplier products availability

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -20,3 +20,4 @@ address=Address
 city=City
 tableHeaderTitle=Suppliers Table
 placeholderSearchInput=Search by name or id
+headerSupplierProducts=Supplier Products
