Feature: Implemented Base controller in order to have a HOC component that hierarchically passes functions to other controllers in execution to go back to last visited page

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -20,4 +20,8 @@ address=Address
 city=City
 tableHeaderTitle=Suppliers Table
 placeholderSearchInput=Search by name or id
+
+#Detail view locale
 headerSupplierProducts=Supplier Products
+titleDetail= Supplier detail
+Information=Information
