Feature: added logic to make home view filter input to get the supplier by id or name provided, also implemented detailProductDialog to be shown when clicking on product element yet to know the actual behavior of the creation form dialog

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -10,6 +10,9 @@ appDescription=Bootcamp Sap Fiori final exercice
 #XTIT: Main view title
 title=Final Project Exercice
 
+#filter fragment
+buttonSearchText=Filtrar
+
 #Suppliers table fragment headers
 
 supplierId=Supplier ID
@@ -25,3 +28,4 @@ placeholderSearchInput=Search by name or id
 headerSupplierProducts=Supplier Products
 titleDetail= Supplier detail
 Information=Information
+productDetails=Product Details
