Feature: Implemented every feature of the test creation form is correctly set up and it can create a product on the supplier products and its respective dialogs

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -11,7 +11,7 @@ appDescription=Bootcamp Sap Fiori final exercice
 title=Final Project Exercice
 
 #filter fragment
-buttonSearchText=Filtrar
+buttonSearchText=Filter
 
 #Suppliers table fragment headers
 
@@ -29,3 +29,4 @@ headerSupplierProducts=Supplier Products
 titleDetail= Supplier detail
 Information=Information
 productDetails=Product Details
+resetFilters=Clear Filter
