Feature: added Select input in creation form and its respective validation

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -30,3 +30,9 @@ titleDetail= Supplier detail
 Information=Information
 productDetails=Product Details
 resetFilters=Clear Filter
+
+productId=Product ID
+productName=Product Name
+productUnitPrice=Unit Price
+productQuantityPerUnit=Quantity per Unit
+moreInfo=More Information
