Refactor: Restored filterHeader to a prior version due to missunderstanding in monday's meeting with Jhonny about 2 filters on main page changed to a one filter, erased some logs and unused variables

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -22,7 +22,7 @@ contactTitle=Contact Title
 address=Address
 city=City
 tableHeaderTitle=Suppliers Table
-placeholderSearchInput=Search by name or id
+placeholderSearchInput=Search supplier by name or id
 
 #Detail view locale
 headerSupplierProducts=Supplier Products
