Feature: Added delection logic, to delete not desired supplier products

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -14,7 +14,6 @@ title=Final Project Exercice
 buttonSearchText=Filter
 
 #Suppliers table fragment headers
-
 supplierId=Supplier ID
 companyName=Company Name
 contactName=Contact Name
@@ -25,6 +24,7 @@ tableHeaderTitle=Suppliers Table
 placeholderSearchInput=Search supplier by name or id
 
 #Detail view locale
+delete=Delete
 headerSupplierProducts=Supplier Products
 titleDetail= Supplier detail
 Information=Information
@@ -36,3 +36,7 @@ productName=Product Name
 productUnitPrice=Unit Price
 productQuantityPerUnit=Quantity per Unit
 moreInfo=More Information
+Country=Country
+Region=Region
+Address=Address
+city=City
