Feature: added dynamic text on detail product dialog when discountinued renders conditionally yes or not, also erased console logs

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -22,6 +22,9 @@ address=Address
 city=City
 tableHeaderTitle=Suppliers Table
 placeholderSearchInput=Search supplier by name or id
+sort=Sort
+yes=Yes
+no=No
 
 #Detail view locale
 delete=Delete
