--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -39,6 +39,7 @@ productName=Product Name
 productUnitPrice=Unit Price
 productQuantityPerUnit=Quantity per Unit
 moreInfo=More Information
+category=Category
 Country=Country
 Region=Region
 Address=Address
