Fixture: when passing texts in functions as hardcoded, now fixed using texts from locale i18n dynamically getting the model and the text intance following app language

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -43,3 +43,6 @@ Country=Country
 Region=Region
 Address=Address
 city=City
+errorFormAlert=Please fill the following fields: 
+errorFormMessage=Please fill all required fields
+productSuccessText=Product created successfully
