Fixture: when passing texts in functions as hardcoded, now fixed using texts from locale i18n dynamically getting the model and the text intance following app language

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -47,3 +47,4 @@ city=City
 errorFormAlert=Please fill the following fields: 
 errorFormMessage=Please fill all required fields
 productSuccessText=Product created successfully
+deleted=Product deleted
